syntax = "proto3";

option java_package = "com.dr.jjsembako";
option java_multiple_files = true;

message ProductOrderList {
  repeated ProductOrderStore data = 1;
}

message ProductOrderStore {
  string id = 1;
  int32 order_qty = 2;
  int64 order_price = 3;
  int64 order_total_price = 4;
}